--- a/ui/public/index.html
+++ b/ui/public/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root" style="height: 96vh;"></div>
   <script src="../dist/bundle.js"></script>
 </body>
 
